--- a/src/App.sass
+++ b/src/App.sass
@@ -1,2 +1,12 @@
 .App
-  text-align: center
+  display: grid
+  grid-template-columns: repeat(1,1fr)
+  margin: auto
+  width: 100%
+  padding: 20px
+  background-color: red
+  gap: 0px 35px
+
+@media (min-width: 576px)
+  .App
+    grid-template-columns: repeat(2, 61% 35%)
