Crear componente input

--- a/src/components/ShippingAddress/styles.sass
+++ b/src/components/ShippingAddress/styles.sass
@@ -1,2 +1,15 @@
-.shipping-address
-    background-color: blue
+@import "../../theme-color"
+.container-shipping-address
+    .shipping-address
+        min-height: 600px
+        border: solid 1px $color-lightgray
+        .shipping-address-title
+            height: 50px
+            padding-left: 20px
+            border-bottom: 1px solid black
+
+            h3
+                justify-content: center
+                align-items: center
+                margin: 0
+                vertical-align: middle
