--- a/src/App.sass
+++ b/src/App.sass
@@ -3,10 +3,12 @@
   grid-template-columns: repeat(1,1fr)
   margin: auto
   width: 100%
-  padding: 20px
-  background-color: red
+
   gap: 0px 35px
+  width: 95%
+  position: relative
+  top: 30px
 
 @media (min-width: 576px)
   .App
-    grid-template-columns: repeat(2, 61% 35%)
+    grid-template-columns: repeat(2, 63% 35%)
