--- a/src/theme-color.sass
+++ b/src/theme-color.sass
@@ -3,4 +3,4 @@ $color-white: #FFFFFF
 $color-red: #FF0000
 $color-darkgray: #A9A9A9
 $color-gainsboro: #DCDCDC
-$color-lightgray: #D3D3D3
+$color-lightgray: #ECE8EA
