--- a/src/App.sass
+++ b/src/App.sass
@@ -1,14 +1,42 @@
+@import "./theme-color"
 .App
   display: grid
   grid-template-columns: repeat(1,1fr)
   margin: auto
   width: 100%
-
-  gap: 0px 35px
+  gap: 45px 35px
   width: 95%
   position: relative
   top: 30px
+  padding-bottom: 20px
+.button
+  display: inline-block
+  font-weight: 400
+  line-height: 1.5
+  text-align: center
+  text-decoration: none
+  vertical-align: middle
+  cursor: pointer
+  -webkit-user-select: none
+  -moz-user-select: none
+  user-select: none
+  background-color: transparent
+  border: 1px solid transparent
+  padding: .375rem 1.2rem
+  font-size: 1rem
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out
+
+.btn-dark
+  color: $color-white
+  background-color: $color-black
+  border-color: $color-black
+.btn-danger
+  color: $color-white
+  background-color: $color-red
+  border-color: $color-red
 
 @media (min-width: 576px)
   .App
     grid-template-columns: repeat(2, 63% 35%)
+  .button
+    padding: .375rem 1rem
