--- a/src/components/ShippingAddress/styles.sass
+++ b/src/components/ShippingAddress/styles.sass
@@ -1,13 +1,11 @@
 @import "../../theme-color"
 .container-shipping-address
     .shipping-address
-        min-height: 600px
+        min-height: 500px
         border: solid 1px $color-lightgray
         .shipping-address-title
-            height: 50px
-            padding-left: 20px
+            padding: 20px 20px
             border-bottom: 1px solid black
-
             h3
                 justify-content: center
                 align-items: center
