--- a/src/App.sass
+++ b/src/App.sass
@@ -40,3 +40,6 @@
     grid-template-columns: repeat(2, 63% 35%)
   .button
     padding: .375rem 1rem
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape)
+  .App
+    grid-template-columns: repeat(1,1fr)
